--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
   <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
 
-  
+  <link rel="stylesheet" type='text/css' 
+        href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+          
 </head>
 <body>
   <app-root></app-root>
